# calculator-pipeline

./: Cargo.toml  README.md
calculator/: Cargo.toml
calculator/src/: calculator.rs  common.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
gui/: Cargo.toml
gui/src/: error.rs  main.rs  parser.rs
trace/: Cargo.toml
trace/src/: main.rs
