[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
env_logger = "0.10.0"
open = "4.1.0"
tokio = { version = "1.28.0", features = ["net", "full"] }
